app/assets/stylesheets/pageflow/editor/change_theme.scss
&.change_theme {
  .box {
    position: absolute;
    top: 20px;
    left: 20px;
    bottom: 20px;
    right: 20px;
    max-width: 1100px;
    max-height: 650px;
    background-color: #eee;
  }

  .content {
    position: absolute;
    top: 20px;
    right: 20px;
    bottom: 50px;
    left: 20px;
    overflow: auto;
    background-color: #fff;

    >div {
      padding: 10px;
    }
  }

  .footer {
    position: absolute;
    right: 20px;
    bottom: 10px;
    left: 20px;
  }

  .themes_panel {
    position: absolute;
    top: 60px;
    left: 20px;
    width: 330px;
  }

  .preview_panel {
    position: absolute;
    top: 68px;
    right: 30px;
    left: 370px;
    bottom: 50px;
  }

  .use_theme {
    @include button(#590);
  }

  .theme_name {
    margin: 10px;
  }

  .button_or_checkmark {
    margin-right: 10px;
    position: absolute;
    right: 10px;
  }

  .theme_in_use {
    font-size: 35px;
  }

  li {
    position: relative;
    line-height: 60px;
    background-color: #eeeeee;
    margin: 10px;

    .active {
      background-color: #d2e5fa;
    }
  }

  h2.themes_header {
    display: block;
    font-size: 1.5em;
    font-weight: bold;
    text-transform: none;
    position: absolute;
    top: 25px;
    left: 30px;
  }

  h2.preview_header {
    font-size: 14px;
    text-transform: none;
  }

  .preview_image_region {
    margin-bottom: 30px;
    border: 1px solid #eee;
    padding-top: 71%;
    position: relative;
  }

  .preview_image {
    position: absolute;
    top: 0;
    max-width: 100%;
    z-index: 2;
  }

  .loading {
    position: absolute;
    top: 50px;
    z-index: 1;
    width: 100%;
  }
}

